--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 * {
-  font-family: "Raleway", sans-serif;
+  font-family: "Gentium Plus", serif;
+  font-size: 14px;
 }
 body {
-  font-size: 1.1rem;
+  font-size: 14px;
   color: #666;
+  font-weight: 300;
 }
